@@ -1,6 +1,10 @@
 devel
 -----
 
+* Fix fuzzer tests. Actually look at `Connection: Close` HTTP header and
+  do not expect the connection to stay open if we see this. This fixes
+  BTS-2185.
+
 * Fix BTS-2220: Fix failing autoupgrade of databases in cluster mode.
   This was caused by key generation now using the cluster key
   generator on dbservers, which fails during upgrade with a message that
